added all strings to the values file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,23 @@
 <resources>
     <string name="app_name">Individual Project</string>
+    <string name="title">Title</string>
+    <string name="price">Price :</string>
+    <string name="pricevalue">PriceValue</string>
+    <string name="quantity">Quantity :</string>
+    <string name="quantity_value">Quantity Value</string>
+    <string name="total_price">Total Price :</string>
+    <string name="totalvalue">TotalValue</string>
+    <string name="next">Next</string>
+    <string name="value">value</string>
+    <string name="total_before_tax">Total Before Tax:</string>
+    <string name="total_after_tax">Total After Tax:</string>
+    <string name="tax">Tax:</string>
+    <string name="place_order">Place Order</string>
+    <string name="thank_you_for_ordering">Thank You for Ordering!</string>
+    <string name="item_title">Item Title</string>
+    <string name="item_price">Item price</string>
+    <string name="price_value">price value</string>
+    <string name="maximum_amount_3">maximum amount: 3</string>
+    <string name="add_to_cart">Add to Cart</string>
+    <string name="sports_center">Sports Center</string>
 </resources>
